scrollbar problem, solved

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ header{ /* Barra de navegación superior */
 
 main{ /* Parte principal de la página */
     position: fixed;
+    display: flex;
     width: 100%;
     top: 60px;
     left: 0;
@@ -157,7 +158,6 @@ footer{ /* Barra de navegación inferior */
 
 /* Primera fila de cartas */
 .rowsCards{
-    margin-top: 10px;
     float: left;
 }
 
@@ -292,7 +292,6 @@ input {
     top: 65px;
     position: relative;
     display: flex;
-    margin-left: 10px;
 }
 
 
